@@ -1,3 +1,8 @@
+2020-03-29  Mark Wielaard  <mark@klomp.org>
+
+	* debuginfod_find_debuginfo.3 (HTTP HEADER): Document the expected
+	header format and purpose.
+
 2020-03-28  Frank Ch. Eigler  <fche@redhat.com>
 
 	* debuginfod.8: Document valid --port=NUM range, excludes 0.
